# tram

./: makefile  pyproject.toml  readme.md
html/: index.html  search.js  tram.html
trafo/: __init__.py  init.ct
tram/: __init__.py  init.ct
